--- a/.github/workflows/toc-auto.yml
+++ b/.github/workflows/toc-auto.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: technote-space/toc-generator@v4.0.0
         with:
            # TARGET_PATHS: PatchNotes/Altibase_7.1/kor/Altibase_7_1_0_7_9_Patch_Notes.md
-           TARGET_PATHS: Technical Documents/kor/Supported Platforms.md
+           TARGET_PATHS: Technical%20Documents/kor/Supported%20Platforms.md
            TOC_TITLE: #### Table of Contents
            MAX_HEADER_LEVEL: 3
            COMMIT_MESSAGE: update toc
