--- a/.github/workflows/toc-auto.yml
+++ b/.github/workflows/toc-auto.yml
@@ -18,7 +18,7 @@ on:
 
 jobs:
   generateTOC:
-  #  name: TOC Generator
+    name: TOC Generator
     runs-on: ubuntu-latest
     steps:
       - uses: technote-space/toc-generator@v4.0.0
