--- a/.github/workflows/toc-auto.yml
+++ b/.github/workflows/toc-auto.yml
@@ -23,7 +23,7 @@ jobs:
     steps:
       - uses: technote-space/toc-generator@v4.0.0
         with:
-           TARGET_PATHS: ReleaseNotes/kor/Altibase_Migration_Center_7_10_Release_Notes.md
+           TARGET_PATHS: PatchNotes/Altibase_6.5.1/kor/Altibase_6_5_1_9_3_Patch_Notes.md
            TOC_TITLE: #### Table of Contents
            MAX_HEADER_LEVEL: 3
            COMMIT_MESSAGE: update toc
